[gd_scene load_steps=28 format=2]

[ext_resource path="res://player/skele.png" type="Texture" id=1]
[ext_resource path="res://player/camera.gd" type="Script" id=2]
[ext_resource path="res://player/player.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.42
height = 0.7

[sub_resource type="AtlasTexture" id=2]
flags = 19
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
flags = 19
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
flags = 19
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
flags = 19
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
flags = 19
atlas = ExtResource( 1 )
region = Rect2( 16, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
flags = 19
atlas = ExtResource( 1 )
region = Rect2( 32, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
flags = 19
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
flags = 19
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
flags = 19
atlas = ExtResource( 1 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
flags = 19
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
flags = 19
atlas = ExtResource( 1 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
flags = 19
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
flags = 19
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
flags = 19
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
flags = 19
atlas = ExtResource( 1 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
flags = 19
atlas = ExtResource( 1 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 3 ) ],
"loop": true,
"name": "walk_down",
"speed": 6.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": false,
"name": "stand",
"speed": 0.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
} ]

[sub_resource type="CubeMesh" id=19]
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="SpatialMaterial" id=20]
albedo_color = Color( 0.447059, 0.607843, 0.858824, 1 )

[sub_resource type="CapsuleMesh" id=21]
radius = 0.25
radial_segments = 6
rings = 1

[sub_resource type="SpatialMaterial" id=22]
albedo_color = Color( 0.866667, 0.596078, 0.360784, 1 )

[sub_resource type="CubeMesh" id=23]
size = Vector3( 0.1, 0.1, 0.5 )

[sub_resource type="SpatialMaterial" id=24]
albedo_color = Color( 0.67451, 0.67451, 0.67451, 1 )

[node name="player" type="KinematicBody"]
input_ray_pickable = false
collision_layer = 32
collision_mask = 33
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="collision_shape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.766839, 0 )
shape = SubResource( 1 )

[node name="sprite" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.835152, 0 )
pixel_size = 0.1
billboard = 2
frames = SubResource( 18 )
animation = "stand"
playing = true

[node name="mesh" type="Spatial" parent="."]
visible = false

[node name="right_eye" type="MeshInstance" parent="mesh"]
transform = Transform( 0.993391, 1.87002e-08, 0.114781, 0.114781, -1.61844e-07, -0.993391, 0, 1, -1.62921e-07, -0.0795463, 1.27433, 0.167596 )
mesh = SubResource( 19 )
material/0 = SubResource( 20 )

[node name="left_eye" type="MeshInstance" parent="mesh"]
transform = Transform( 0.985827, -2.73327e-08, -0.167767, -0.167767, -1.60612e-07, -0.985827, 0, 1, -1.62921e-07, 0.0914714, 1.27433, 0.167596 )
mesh = SubResource( 19 )
material/0 = SubResource( 20 )

[node name="body_mesh" type="MeshInstance" parent="mesh"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.746921, 0 )
mesh = SubResource( 21 )
material/0 = SubResource( 22 )

[node name="left_arm" type="MeshInstance" parent="mesh"]
transform = Transform( 0.900918, 0, 0.433989, 0.348946, 0.59457, -0.724377, -0.258037, 0.804044, 0.535659, 0.313258, 0.897738, 0.100941 )
mesh = SubResource( 23 )
material/0 = SubResource( 24 )

[node name="right_arm" type="MeshInstance" parent="mesh"]
transform = Transform( 0.641312, -0.734962, -0.22034, 0.380869, 0.554224, -0.740118, 0.666077, 0.390726, 0.635355, -0.271974, 0.897738, 0.100941 )
mesh = SubResource( 23 )
material/0 = SubResource( 24 )

[node name="cam_root" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="h" type="Spatial" parent="cam_root"]

[node name="v" type="Spatial" parent="cam_root/h"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.41498, 0 )

[node name="camera" type="ClippedCamera" parent="cam_root/h/v"]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, -4 )
current = true
process_mode = 1

[node name="follow_debounce" type="Timer" parent="cam_root"]
wait_time = 0.1
one_shot = true

[node name="hud" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="debug_panel" type="Panel" parent="hud"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = -5.0

[node name="debug_label" type="RichTextLabel" parent="hud/debug_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
bbcode_enabled = true
bbcode_text = "[table=2]
[cell]just[/cell]
[cell]some[/cell]
[cell]example[/cell]
[cell]table[/cell]
[/table]"
text = "justsomeexampletable"
scroll_following = true
